Bug 30864 - json-c required, but not during configure
Summary: json-c required, but not during configure
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: releng (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-18 03:47 UTC by Tim Haines
Modified: 2023-09-18 15:26 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
Build log (3.16 KB, text/x-log)
2023-09-18 03:47 UTC, Tim Haines
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Haines 2023-09-18 03:47:58 UTC
Created attachment 15112 [details]
Build log

configure reports not finding jsonc without error, but it is later required by tapset-debuginfod.cxx.

version: master/2a3de2e25
relevant code changes introduced by a2d19c8670690f87ee74db4a106829aa8edefbce.

$ ../configure --with-dyninst
...
checking for jsonc... no
...

$ make
...
../tapset-debuginfod.cxx:17:10: fatal error: json-c/json.h: No such file or directory
   17 | #include <json-c/json.h>
      |          ^~~~~~~~~~~~~~~
compilation terminated.


Fully log attached.
Comment 1 Frank Ch. Eigler 2023-09-18 15:26:31 UTC
commit 013c39a5eddf4f14278