PR30864: tweak configury for debuginfod/json-c

Add json-c as debuginfod-related buildrequire.  Check for
its presence better in configure.ac and in the source file.